mdapipkg/objects/Reminder__c/fields/Appointment__c.field-meta.xml
<CustomField>
    <fullName>Appointment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Appointment</label>
    <referenceTo>Appointment__c</referenceTo>
    <relationshipLabel>Reminders</relationshipLabel>
    <relationshipName>Reminders</relationshipName>
    <type>Lookup</type>
</CustomField>