mdapipkg/objects/Reminder__c/fields/Patient__c.field-meta.xml
<CustomField>
    <fullName>Patient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient</label>
    <referenceTo>Patient__c</referenceTo>
    <relationshipLabel>Reminders</relationshipLabel>
    <relationshipName>Reminders</relationshipName>
    <type>Lookup</type>
</CustomField>