mdapipkg/objects/Reminder__c/validationRules/Reminder_Message_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Reminder_Message_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( Message__c )</errorConditionFormula>
    <errorDisplayField>Message__c</errorDisplayField>
    <errorMessage>Reminder Message is required.</errorMessage>
</ValidationRule>