mdapipkg/objects/Reminder__c/validationRules/Reminder_Method_Allowed_Values.validationRule-meta.xml
<ValidationRule>
    <fullName>Reminder_Method_Allowed_Values</fullName>
    <active>true</active>
    <description>Method must be Email or SMS (picklist)</description>
    <errorConditionFormula>NOT(
  OR(
    ISPICKVAL( Method__c , &quot;Email&quot; ),
    ISPICKVAL( Method__c , &quot;SMS&quot; )
  )
)</errorConditionFormula>
    <errorDisplayField>Method__c</errorDisplayField>
    <errorMessage>Reminder Method must be Email or SMS.</errorMessage>
</ValidationRule>